--- a/MyDebug_1/MyDebug_1.vcxproj
+++ b/MyDebug_1/MyDebug_1.vcxproj
@@ -42,7 +42,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -143,6 +143,10 @@
     <ClCompile Include="23，合并K个升序链表.cpp" />
     <ClCompile Include="24，两两交换链表中的节点.cpp" />
     <ClCompile Include="25，K个一组反转链表.cpp" />
+    <ClCompile Include="28，找出字符串中第一个匹配项的下标.cpp" />
+    <ClCompile Include="29，两数相除.cpp" />
+    <ClCompile Include="30，串联左右单词的子串_2.cpp" />
+    <ClCompile Include="30，串联所有单词的子串.cpp" />
     <ClCompile Include="7.数字反转.cpp" />
     <ClCompile Include="8.提取字符串中数字.cpp" />
     <ClCompile Include="9.回文数.cpp" />
